--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: minisvg
 Type: Package
 Title: SVG Document Builder
-Version: 0.1.0
+Version: 0.1.1
 Author: mikefc
 Maintainer: mikefc <mikefc@coolbutuseless.com>
 Description: Build SVG documents with R.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.99.9001
+RoxygenNote: 7.0.2
 URL: https://github.com/coolbutuseless/minisvg,https://coolbutuseless.github.io/package/minisvg/
 Imports:
     R6,
@@ -16,5 +16,6 @@ Imports:
 Suggests: 
     knitr,
     rmarkdown,
-    xml2
+    xml2,
+    base64enc
 VignetteBuilder: knitr
