Add SVGFilter class.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ S3method(as.character,svg_property)
 S3method(print,svg_property)
 export(SVGDocument)
 export(SVGElement)
+export(SVGFilter)
 export(SVGPattern)
 export(SVGPatternList_to_svg)
 export(knit_print.SVGDocument)
+export(knit_print.SVGFilter)
 export(knit_print.SVGPattern)
 export(parse_svg_doc)
 export(parse_svg_elem)
@@ -17,6 +19,7 @@ export(show_svg)
 export(stag)
 export(svg_doc)
 export(svg_elem)
+export(svg_filter)
 export(svg_pattern)
 export(svg_prop)
 import(R6)
