--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: minisvg
 Type: Package
 Title: SVG Document Builder
-Version: 0.1.5
+Version: 0.1.6
 Author: mikefc
 Maintainer: mikefc <mikefc@coolbutuseless.com>
 Description: Build SVG documents with R.
@@ -17,5 +17,6 @@ Suggests:
     knitr,
     rmarkdown,
     xml2,
-    base64enc
+    base64enc,
+    htmltools
 VignetteBuilder: knitr
