Add SVGLiteral to insert raw SVG/HTML into SVG docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,15 @@
 
 S3method(as.character,SVGDocument)
 S3method(as.character,SVGElement)
+S3method(as.character,SVGLiteral)
+S3method(as.character,SVGNode)
 S3method(as.character,svg_property)
 S3method(print,svg_property)
 export(SVGDocument)
 export(SVGElement)
 export(SVGFilter)
+export(SVGLiteral)
+export(SVGNode)
 export(SVGPattern)
 export(SVGPatternList_to_svg)
 export(knit_print.SVGDocument)
@@ -20,6 +24,7 @@ export(stag)
 export(svg_doc)
 export(svg_elem)
 export(svg_filter)
+export(svg_literal)
 export(svg_pattern)
 export(svg_prop)
 import(R6)
